--- a/chromeextension/manifest.json
+++ b/chromeextension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Amazon NewTab",
+  "name": "HipBuy",
   "description": "This extension shows an amazon product on the new tab page",
-  "version": "0.11",
+  "version": "0.12",
   "icons": { "16": "icons/16x16.png"
 			 , "48": "icons/48x48.png"
 			 , "128": "icons/128x128.png" 
